Fixed scrollbar appearing due to animation Changed overflow to hidden for brief period during animations

--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,7 @@ body{
     min-height: max-content;
     min-width: max-content;
     height: 100%;
-    max-width: 95vw;
+    max-width: 100vw;
 }   
 header h1{
     font-family: "Allura", cursive;
